# rav

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/migrations/: V016__calendar.sql  V018__animation_mode.sql  V019__known_addresses.sql  V020__mobile_nav_prefs.sql  V021__thread_id.sql  V022__undo_send_delay.sql  V023__vacation_responder.sql  V024__filter_rules.sql  V025__mfa.sql  V026__mfa_passkey.sql  V027__pgp_keys.sql  V028__calendar_stickers.sql  V029__filter_rules_v2.sql  V030__draft_staging.sql  V031__outbox.sql
backend/src/: AGENTS.md  config.rs  email_theme.rs  error.rs  folder_cipher.rs  link_proxy.rs  mail_transport.rs  main.rs  test_support.rs
backend/src/auth/: imap_auth.rs  middleware.rs  session.rs  user_data.rs
backend/src/calendar/: ics.rs
backend/src/db/: calendar.rs  contact_groups.rs  contacts.rs  display_preferences.rs  drafts.rs  filters.rs  folders.rs  identities.rs  messages.rs  mfa.rs  mod.rs  notification_preferences.rs  outbox.rs  pgp.rs  pool.rs  stickers.rs  tags.rs  vacation.rs
backend/src/imap/: client.rs  connection.rs  error.rs  mock.rs  mod.rs  session_cache.rs  types.rs
backend/src/mfa/: crypto.rs  mod.rs  passkey.rs  totp.rs
backend/src/realtime/: events.rs  idle.rs  mod.rs  outbox_worker.rs  sync.rs  worker.rs  ws.rs
backend/src/routes/: attachments.rs  auth.rs  calendar.rs  contact_groups.rs  contacts.rs  display_preferences.rs  drafts.rs  filters.rs  folder_mgmt.rs  folders.rs  health.rs  identities.rs  link_proxy.rs  mfa.rs  mod.rs  notification_preferences.rs  outbox.rs  pgp.rs  quota.rs  search.rs  send.rs  spam.rs  stickers.rs  tags.rs  tests.rs  vacation.rs
backend/src/routes/messages/: mod.rs  types.rs
backend/src/search/: engine.rs
backend/src/sieve/: client.rs  generator.rs  mod.rs
backend/src/smtp/: client.rs  error.rs  mock.rs  types.rs
frontend/: next.config.ts  package.json
frontend/scripts/: optimize-stickers.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/: PreferencesLoader.tsx  providers.tsx
frontend/src/components/accounts/: AccountSwitcher.tsx  AddAccountModal.tsx
frontend/src/components/calendar/: CalendarContextMenu.tsx  CalendarHeader.tsx  CalendarPanel.tsx  DayView.tsx  EventChip.tsx  EventDetail.tsx  EventForm.tsx  EventListPopover.tsx  MonthView.tsx  StickerCell.tsx  StickerPicker.tsx  WeekView.tsx  calendarUtils.ts
frontend/src/components/contacts/: ContactCard.tsx  ContactDialog.tsx  (+2 more)
frontend/src/hooks/: useAutocomplete.ts  useCalendar.ts  useCalendarNavigation.ts  useCalendarStickers.ts  useCompose.ts  useContactGroups.ts  useContacts.ts  useDisplayPreferences.ts  useDocumentTitle.ts  useFilters.ts  useFolders.ts  useIsMobile.ts  useKeyboardShortcuts.ts  useLongPress.ts  useMessages.ts  useMfa.ts  useMobileNav.ts  useNotifications.ts  usePgp.ts  useQuietHours.ts  useSearch.ts  useSpamReport.ts  useTags.ts  useVacation.ts  useWebSocket.ts
frontend/src/lib/: api.ts  email-utils.ts  features.ts  folders.ts  fuzzySearch.ts  inert-polyfill.ts  query-client.ts  search-parser.ts
frontend/src/stores/: useAuthStore.ts  useCalendarStore.ts  useComposeStore.ts  useUiStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: calendar.ts  contact.ts  filter.ts  folder.ts  message.ts  mfa.ts  pgp.ts  sticker.ts  tag.ts  vacation.ts
(+83 files in other folders)
