[package]
name = "oxi-email-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["env", "toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.7", features = ["cors", "compression-gzip", "trace", "fs"] }
tower = "0.5"
dashmap = "6"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6", default-features = false, features = ["runtime-tokio"] }
native-tls = "0.2"
tower_governor = "0.8"
governor = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.11"
rusqlite = { version = "0.34", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
axum-extra = { version = "0.12", features = ["cookie"] }
async-trait = "0.1.89"
mail-parser = "0.11.2"
futures = "0.3.32"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
uuid = { version = "1", features = ["v4"] }
tantivy = "0.26"
ical = "0.11"
regex = "1.12.3"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
