[package]
name = "rav-email-server"
version = "0.2.2"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["env", "toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.7", features = ["cors", "compression-gzip", "trace", "fs"] }
tower = "0.5"
dashmap = "6"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6", default-features = false, features = ["runtime-tokio"] }
native-tls = "0.2"
tower_governor = "0.8"
governor = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.11"
rusqlite = { version = "0.34", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
axum-extra = { version = "0.12", features = ["cookie"] }
async-trait = "0.1.89"
mail-parser = "0.11.2"
futures = "0.3.32"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
uuid = { version = "1", features = ["v4"] }
tantivy = "0.26"
ical = "0.11"
regex = "1.12.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rrule = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
aes-gcm = "0.10"
hmac = "0.13.0"
sha1 = "0.10"
webauthn-rs = { version = "0.5.5", features = ["resident-key-support"] }
url = "2"
ipnet = "2"
ts-rs = { version = "12.0.1", optional = true }

[features]
default = ["stickers"]
stickers = []
# Enables #[derive(TS)] on wire-contract structs and pulls in the ts-rs
# crate. Off by default: zero footprint in the release binary. Enabled only
# when regenerating frontend/src/types/generated/ (`cargo test --features ts-export`).
ts-export = ["dep:ts-rs"]

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
